--- a/notebooks/OpenFold.ipynb
+++ b/notebooks/OpenFold.ipynb
@@ -1,10 +1,10 @@
 {
   "cells": [
-	{
+    {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/aqlaboratory/OpenFold/blob/main/notebooks/OpenFold.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -281,6 +281,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "o7BqQN_gfYtq"
+      },
+      "outputs": [],
       "source": [
         "#@title Search against genetic databases\n",
         "\n",
@@ -434,12 +439,7 @@
         "plt.yticks(range(0, max_num_alignments + 1, max(1, int(max_num_alignments / 3))))\n",
         "plt.legend()\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "o7BqQN_gfYtq"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -901,18 +901,20 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "openfold2",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
+      "name": "python",
+      "version": "3.10.19"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
